added ids for factories and chocolates; modified all methods per that change; added getting by name for those entities
